--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
         </p>
 
         <div class="actions">
-          <a href="#" class="btn btn-primary">
+          <a
+            href="https://github.com/youcefzaid/sm/releases/download/prod/School.Manager-0.1.0.Setup.exe"
+            class="btn btn-primary"
+          >
             <span>Télécharger la Démo</span>
             <svg
               width="20"
@@ -192,7 +195,11 @@
               <line x1="12" y1="15" x2="12" y2="3"></line>
             </svg>
           </a>
-          <a href="#" class="btn btn-outline">
+          <a
+            href="https://youtu.be/puacdI1qsaE"
+            target="_blank"
+            class="btn btn-outline"
+          >
             <span>Comment Installer</span>
             <svg
               width="20"
