feat: add privacy policy page and footer to enhance user information and site structure

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             href="https://github.com/youcefzaid/sm/releases/download/n/School.Manager-0.1.0.Setup.exe"
             class="btn btn-primary"
           >
-            <span data-lang="fr">Télécharger</span>
-            <span data-lang="ar">تحميل</span>
+            <span data-lang="fr">Version démo</span>
+            <span data-lang="ar">احصل على النسخة التجريبية</span>
             <svg
               width="20"
               height="20"
@@ -153,6 +153,16 @@
         </div>
       </section>
     </main>
+
+    <footer class="site-footer">
+      <div class="footer-content">
+        <p>&copy; 2026 School Manager</p>
+        <a href="privacy-policy/index.html" class="footer-link">
+          <span data-lang="fr">Politique de confidentialité</span>
+          <span data-lang="ar">سياسة الخصوصية</span>
+        </a>
+      </div>
+    </footer>
 
     <a
       href="https://wa.me/+213540726499"
